--- a/package.json
+++ b/package.json
@@ -37,5 +37,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/olya110698/video-clip-selector.git"
+  },
+  "author": "Volha Shupitsa",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/olya110698/video-clip-selector/issues"
+  },
+  "homepage": "https://github.com/olya110698/video-clip-selector#readme",
+  "description": ""
 }
